Changed settings to setting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Embed Code Generator</h1>
 			<form id="passwordGenerator">
 				<section>
-					<h2>Settings</h2>
+					<h2>Setting</h2>
 					<span>
 						<label for="txtSiteName">Site Name</label>
 						<input id="txtSiteName" placeholder="#SHd" type="text" value="">
