Revised variable names

--- a/index.html
+++ b/index.html
@@ -13,29 +13,29 @@
 				<section>
 					<h2>Settings</h2>
 					<span>
-						<label for="txtSiteName">Site Name</label>
-						<input id="txtSiteName" placeholder="#SHd" type="text" value="">
+						<label for="siteName">Site Name</label>
+						<input id="siteName" placeholder="#SHd" type="text" value="">
 					</span>
 					<span>
-						<label for="urlPostUrl">Post URL</label>
-						<input id="urlPostUrl" placeholder="http://seanholcroft.co.uk" type="url" value="">
+						<label for="postUrl">Post URL</label>
+						<input id="postUrl" placeholder="http://seanholcroft.co.uk" type="url" value="">
 					</span>
 					<h3>Image settings</h3>
 					<span>
-						<label for="txtImageAltText">Alt Text</label>
-						<input id="txtImageAltText" placeholder="" type="text" value="">
+						<label for="imageAltText">Alt Text</label>
+						<input id="imageAltText" placeholder="" type="text" value="">
 					</span>
 					<span>
-						<label for="urlImageUrl">URL</label>
-						<input id="urlImageUrl" placeholder="" type="url" value="">
+						<label for="imageUrl">URL</label>
+						<input id="imageUrl" placeholder="" type="url" value="">
 					</span>
 					<span>
-						<label for="numImageHeight">Height</label>
-						<input id="numImageHeight" placeholder="900" type="number" value="">
+						<label for="imageHeight">Height</label>
+						<input id="imageHeight" placeholder="900" type="number" value="">
 					</span>
 					<span>
-						<label for="numImageWidth">Width</label>
-						<input id="numImageWidth" placeholder="1600" type="number" value="">
+						<label for="imageWidth">Width</label>
+						<input id="imageWidth" placeholder="1600" type="number" value="">
 					</span>
 					<button id="generate" type="button">Generate Code</button>
 				</section>
